--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -10,6 +10,7 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
+                <th>Slug</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -18,6 +19,7 @@
             <tr>
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
+                <td>{{ category.slug }}</td>
                 <td>
                     <a href="{{ path('category_show', {'id': category.id}) }}">show</a>
                     <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
@@ -31,5 +33,7 @@
         </tbody>
     </table>
 
+    {{ include('category/_test_include.html.twig') }}
+    {{ include('category/_test_include.html.twig',{ 'my_variable' : 'rakesh' }) }}
     <a href="{{ path('category_new') }}">Create new</a>
 {% endblock %}
