--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,18 @@
     </head>
     <body>
         <div class="container">
+            {% for message in app.flashes('info') %}    {# app.flashes will return an array #}
+                <div class="alert alert-success">
+                    {{message}}
+                </div>
+            {% endfor %}
+
+            {% for message in app.flashes('error') %}    {# app.flashes will return an array #}
+                <div class="alert alert-danger">
+                    {{message}}
+                </div>
+            {% endfor %}
+
             {% block body %}{% endblock %}
         </div>
         
