--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -6,4 +6,6 @@
     {{ form_start(postForm,{'attr':{'id':'custom_post_form'}}) }}
         {{ form(postForm) }}
     {{ form_end(postForm) }}
+
+    <a href="{{ path('posts.list') }}">Back to List</a>
 {% endblock %}
