--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -3,13 +3,7 @@
 {% block title %}Category index{% endblock %}
 
 {% block body %}
-    <h1>Category index</h1>
-
-    {% for message in app.flashes('info') %}    {# app.flashes will return an array #}
-        <div class="alert alert-success">
-            {{message}}
-        </div>
-    {% endfor %}
+    <h1>Category List</h1>
 
     <table class="table">
         <thead>
@@ -39,7 +33,10 @@
         </tbody>
     </table>
 
+    <a href="{{ path('category_new') }}">Create New Category</a>
+     | <a href="{{ path('posts.list') }}">View Posts</a>
+     <br/><br/>
+
     {{ include('category/_test_include.html.twig') }}
-    {{ include('category/_test_include.html.twig',{ 'my_variable' : 'rakesh' }) }}
-    <a href="{{ path('category_new') }}">Create new</a>
+    {{ include('category/_test_include.html.twig',{ 'my_variable' : 'rakesh' }) }}    
 {% endblock %}
